# ModernCocoaFarmer

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Modern Cocoa Farmer.sln  ModernCocoaFarmer.sln
ModernCocoaFarmer/: CMakeLists.txt  MCFGame.cpp  MCFGame.h  Main.cpp  ModernCocoaFarmer.vcxproj  ModernCocoaFarmer.vcxproj.filters
ModernCocoaFarmer/Build Events/: CopyDependencyFiles.bat  CopyResources.bat  CustomBuildStep.bat  ValidateLuaScripts.bat  ValidatePrefabs.bat  ValidateScenes.bat  ValidateScriptableObjects.bat
ModernCocoaFarmer/BuildEvents/: CustomBuildStep.bat
ModernCocoaFarmer/Headers/: MCFGame.h
ModernCocoaFarmer/Headers/Debugging/: LuaScriptReceiver.h  SceneBroadcaster.h
ModernCocoaFarmer/Headers/Game/: MCFGame.h
ModernCocoaFarmer/Headers/Managers/: GameplayManager.h  InteractableBuildingsManager.h
ModernCocoaFarmer/Headers/Media/: VideoPlayer.h
ModernCocoaFarmer/Headers/Networking/: NetworkUtils.h  SocketClient.h  SocketServer.h
ModernCocoaFarmer/Headers/Networking/RAII/: AutoCloseSocket.h  AutoFreeAddressInfo.h
ModernCocoaFarmer/Headers/Settings/: PlayerSettings.h  WindowSettings.h
ModernCocoaFarmer/Headers/UI/: InteractableBuildingDialog.h
ModernCocoaFarmer/Include/: MCFLibraryDllExport.h
ModernCocoaFarmer/Include/Animation/: ChildWalkingToLocationController.h
ModernCocoaFarmer/Include/Bindings/Stats/: ModifierEnumsDataBindingGenerators.h
ModernCocoaFarmer/Include/Data/: DataNodeComponent.h  DataReader.h  DataSystem.h  DataUtils.h  DataWriter.h  ObjectRef.h
ModernCocoaFarmer/Include/Data/Animation/: AnimatorController.h
ModernCocoaFarmer/Include/Data/Communication/: DataObjectKey.h  DataReader.h  PublicPorts.h  ValueForwarder.h  Vec3ValueForwarder.h
ModernCocoaFarmer/Include/Data/Constants/: Constant.h  Vec3Constant.h
ModernCocoaFarmer/Include/Data/Conversion/: ToString.h
ModernCocoaFarmer/Include/Data/Input/: MouseInput.h
ModernCocoaFarmer/Include/Data/Logic/: Not.h
ModernCocoaFarmer/Include/Data/Maths/: Division.h
ModernCocoaFarmer/Include/Data/Objects/: ActivityController.h
ModernCocoaFarmer/Include/Data/Ports/: InputPort.h  OutputPort.h  Port.h  PortType.h
ModernCocoaFarmer/Include/Data/Rendering/: Sprite.h  SpriteNode.h  Text.h  TextNode.h
ModernCocoaFarmer/Include/Data/Resources/: ResourceDictionary.h  ResourceType.h
ModernCocoaFarmer/Include/Data/UI/: ProgressBarController.h
ModernCocoaFarmer/Include/Data/Utils/: PortSetterFunctions.h
ModernCocoaFarmer/Include/DataConverters/Data/: DataNodeComponentDataConverter.h
ModernCocoaFarmer/Include/Debug/: LuaScriptReceiver.h
ModernCocoaFarmer/Include/Debug/Windows/: DataSystemDolceWindow.h
ModernCocoaFarmer/Include/Deserialization/Logic/: LogicDeserializers.h
ModernCocoaFarmer/Include/Deserialization/Stats/: ModifierEnumsDeserializers.h
ModernCocoaFarmer/Include/Family/: Child.h  ChildState.h  DataSources.h  FamilyManager.h
ModernCocoaFarmer/Include/Game/: MCFGame.h
ModernCocoaFarmer/Include/GameEvents/: GameEvent.h  GameEventManager.h
ModernCocoaFarmer/Include/GameEvents/Conditions/: CheckDataStoreBoolValue.h  ChildrenAtLocation.h  ChildrenStatComparison.h  Condition.h  LuaCondition.h  RandomNumberComparison.h  TimeComparison.h
ModernCocoaFarmer/Include/GameEvents/Effects/: CheckLocationsForChildrenArriving.h  CheckLocationsForChildrenLeaving.h  Effect.h  (+11 more)
ModernCocoaFarmer/Include/Locations/: DataSources.h  Location.h  LocationsManager.h
ModernCocoaFarmer/Include/Logic/: ComparisonOperator.h
ModernCocoaFarmer/Include/Money/: MoneyManager.h
ModernCocoaFarmer/Include/Networking/: SocketClient.h  SocketServer.h
ModernCocoaFarmer/Include/Notifications/: Notification.h  NotificationManager.h
ModernCocoaFarmer/Include/Persistence/: Data.h  DataArrayHandle.h  DataObjectHandle.h  DataPath.h  DataStore.h  DataSystem.h
ModernCocoaFarmer/Include/Stats/: DataSources.h  Modifier.h  ModifierEnums.h
ModernCocoaFarmer/Include/Time/: DataSources.h  TimeManager.h  TimeNotifier.h  TimePeriod.h
ModernCocoaFarmer/Include/Utils/: LocaTokens.h
ModernCocoaFarmer/Installer/: ModernCocoaFarmer.rc
ModernCocoaFarmer/Resources/Scenes/: Credits.scene  DebugTools.scene  Finish.scene  Gameplay.scene  Loading.scene  MainMenu.scene  MenuMusic.scene  Options.scene  Splash.scene
ModernCocoaFarmer/Resources/Screens/: DebugTools.screen  Gameplay.screen  Loading.screen  MainMenu.screen  Options.screen  Splash.screen
ModernCocoaFarmer/Resources/Scripts/: Game.lua
ModernCocoaFarmer/Source/: Main.cpp
ModernCocoaFarmer/Source/Animation/: ChildWalkingToLocationController.cpp
ModernCocoaFarmer/Source/Data/: DataNodeComponent.cpp  DataSystem.cpp  DataUtils.cpp  ObjectRef.cpp
ModernCocoaFarmer/Source/Debug/: LuaScriptReceiver.cpp  SceneBroadcaster.cpp
ModernCocoaFarmer/Source/Debugging/: LuaScriptReceiver.cpp  SceneBroadcaster.cpp
ModernCocoaFarmer/Source/Family/: Child.cpp  ChildState.cpp  FamilyManager.cpp
ModernCocoaFarmer/Source/Game/: MCFGame.cpp
ModernCocoaFarmer/Source/GameEvents/: GameEvent.cpp  GameEventManager.cpp
ModernCocoaFarmer/Source/Locations/: Location.cpp  LocationsManager.cpp
ModernCocoaFarmer/Source/Logic/: ComparisonOperator.cpp
ModernCocoaFarmer/Source/Managers/: GameplayManager.cpp  InteractableBuildingsManager.cpp
ModernCocoaFarmer/Source/Media/: VideoPlayer.cpp
ModernCocoaFarmer/Source/Money/: MoneyManager.cpp
ModernCocoaFarmer/Source/Networking/: NetworkUtils.cpp  SocketClient.cpp  SocketServer.cpp
ModernCocoaFarmer/Source/Notifications/: Notification.cpp  NotificationManager.cpp
ModernCocoaFarmer/Source/Persistence/: DataArrayHandle.cpp  DataObjectHandle.cpp  DataStore.cpp  DataSystem.cpp
ModernCocoaFarmer/Source/Settings/: PlayerSettings.cpp  WindowSettings.cpp
ModernCocoaFarmer/Source/Stats/: ChildModifier.cpp  Modifier.cpp  ModifierEnums.cpp
ModernCocoaFarmer/Source/Time/: TimeManager.cpp  TimeNotifier.cpp  TimePeriod.cpp
ModernCocoaFarmer/Source/UI/: InteractableBuildingDialog.cpp
ModernCocoaFarmer/Tests/: CMakeLists.txt
ModernCocoaFarmer/Tests/Source/: ModuleInitialize.cpp
(+707 files in other folders)
